--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,3 +1,8 @@
+@import "../components/calendar/style.scss";
+@import "../components/create_event/style.scss";
+@import "../components/notfound/style.scss";
+@import "../components/sidebar/style.scss";
+
 html,
 body {
     height: 100%;
