--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -4,8 +4,8 @@
     width: 50vw;
     right: -50vw;
     background-color: red;
-}
 
-#sidebar .open {
-    right: 0;
+    &.open {
+        right: 0;
+    }
 }
