--- a/src/components/sidebar/style.scss
+++ b/src/components/sidebar/style.scss
@@ -3,7 +3,9 @@
     height: 100vh;
     width: 50vw;
     right: -50vw;
-    background-color: red;
+    background-color: white;
+    z-index: 10000;
+    transition: all 0.5s;
 
     &.open {
         right: 0;
